# content-report-ai

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/specs/: 01_persistencia.md  02_gerador_dados_sinteticos.md  03_ingestao_e_metricas.md  04_ia_gemini.md  05_relatorio_pdf.md  06_entrega_email.md  07_watcher.md
ferramentas_dev/: gerador_dados_sinteticos.py
src/: retry.py  watcher.py
src/entrega/: email_sender.py
src/ia/: cliente_gemini.py  prompt.py
src/ingestao/: excecoes.py  leitor_csv.py
src/persistencia/: modelos.py  repositorio.py
src/processamento/: calculo_metricas.py  comparacao.py
src/relatorio/: gerador_pdf.py  grafico.py
src/relatorio/templates/: relatorio.html
tests/: test_calculo_metricas.py  test_cliente_gemini.py  test_comparacao.py  test_email_sender.py  test_gerador_pdf.py  test_grafico.py  test_leitor_csv.py  test_prompt.py  test_repositorio.py  test_retry.py  test_watcher.py
